Abstract brute-force-locker handling to AbstractAuthPreprocessor as it should be available/used by all authentication mechanisms; abstract SASL plugins to dedicated abstract class to reduce code duplication; #server-1345